cognome + conta consonanti

--- a/index.html
+++ b/index.html
@@ -19,17 +19,7 @@
             <label for="provincia">PROVINCIA</label>
             <input type="text" id="provincia" required>
             <br>
-            <select name="" id="giorno">
-                <option value="21">21</option>
-            </select>
-            
-            <select name="" id="mese">
-                <option value="9">Settembre</option>
-            </select>
-
-            <select name="" id="anno">
-                <option value="2007">2007</option>
-            </select>
+            <input type="date" id="data">
             <input type="submit" id="invia" onclick="calcola()">
         </form>
     </body>
