manga solo provicia e paese

--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
             <label for="provincia">PROVINCIA</label>
             <input type="text" id="provincia" required>
             <br>
-            <input type="date" id="data">
+            <select name="" id="sesso">
+                <option value="M">M</option>
+                <option value="F">F</option>
+            </select>
+            <br>
+            <input type="date" id="data" required>
+            <br>
             <input type="submit" id="invia" onclick="calcola()">
         </form>
     </body>
