--- a/index.html
+++ b/index.html
@@ -4,21 +4,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calcolo codice fiscale</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
     <body>
         <form>
-            <label for="cognome">COGNOME</label>
+            <label for="cognome">COGNOME</label> <br>
             <input type="text" id="cognome" required>
             <br>
-            <label for="nome">NOME</label>
+            <label for="nome">NOME</label> <br>
             <input type="text" id="nome" required>
             <br>
-            <label for="luogo">LUOGO DI NASCITA</label>
+            <label for="luogo">LUOGO DI NASCITA</label> <br>
             <input type="text" id="luogo" required>
             <br>
-            <label for="provincia">PROVINCIA</label>
+            <label for="provincia">PROVINCIA</label> <br>
             <input type="text" id="provincia" required>
             <br>
+            <label for="sesso">SESSO: </label>
             <select name="" id="sesso">
                 <option value="M">M</option>
                 <option value="F">F</option>
